force-app/main/default/objects/Match__c/fields/Away_Score__c.field-meta.xml
<CustomField>
    <fullName>Away_Score__c</fullName>
    <label>Away Team Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>