force-app/main/default/objects/Match__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Away Team</label>
    <referenceTo>Participation__c</referenceTo>
    <relationshipLabel>Matches (Away Team)</relationshipLabel>
    <relationshipName>Away_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>