force-app/main/default/objects/Match__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Team</label>
    <referenceTo>Participation__c</referenceTo>
    <relationshipLabel>Matches (Home Team)</relationshipLabel>
    <relationshipName>Home_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>