force-app/main/default/objects/Match__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stadium</label>
    <referenceTo>Stadium__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Stadium_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>