force-app/main/default/objects/Match__c/validationRules/Validate_Match_Teams.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Match_Teams</fullName>
    <active>true</active>
    <description>Prevent the score of one team from being empty if the other&apos;s team score is set.</description>
    <errorConditionFormula>ISBLANK(Home_Team__c) &lt;&gt; ISBLANK(Away_Team__c)</errorConditionFormula>
    <errorMessage>Both Team and Away Team should be set</errorMessage>
</ValidationRule>