force-app/main/default/objects/Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Home_Team__c</columns>
    <columns>Home_Score__c</columns>
    <columns>Away_Team__c</columns>
    <columns>Away_Score__c</columns>
    <columns>Round__c</columns>
    <columns>Group__c</columns>
    <columns>Tournament__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Matches</label>
</ListView>